--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^11.1.0"
   }
 }
